# amrex-practice

./: CMakeLists.txt  README.md  visualize.py
src/: Poisson.cpp
